Bug: 56719 Sent folder "to" search dialog too long Set width of select address to be ~30 characters
http://bugzilla.zimbra.com/show_bug.cgi?id=56719

Copied from Perforce
 Change: 276276

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -4504,7 +4504,7 @@ If you feel compelled to have a background color, please do so on a per skin lev
 }
 
 .ZmSelectAddrDialog {
-	width: 600px;
+	width: 375px;
 }
 
 /*Briefcase Split View */
